--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/HDNofc/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/HDNofc/frontend-project-lvl1/actions)",
+  "description": "brain games",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -20,7 +20,8 @@
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
     "brain-calc": "bin/brain-calc.js",
-    "brain-gcd": "bin/brain-gcd.js"
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js"
   },
   "homepage": "https://github.com/HDNofc/frontend-project-lvl1#readme",
   "dependencies": {
